welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: too many arguments for method droite: ()Unit
  droite(2)
        ^DwarfCode:27: error: too many arguments for method droite: ()Unit
  droite(2)
        ^DwarfCode:28: error: not found: value color
  while (getCouleurSol()!=color.green)
                          ^